# tinyxui

./: .gitignore  MANIFEST.in  README.md  clicker.py  clicker.txm  default.css  default.xss  layout.py  mpd.txm  mpd.xml  mpd_client.py  pyproject.toml  style_provider.py  txm.py  xui.py
examples/button/: button.py  button.txm
examples/clicker/: clicker.py  clicker.txm
examples/mpd_client/: mpd.txm  mpd_client.py
tinyxui/: __init__.py  layout.py  main.py  style_provider.py  txm.py
tinyxui/data/: adwaita.css  default.css  win9x.css
